<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/timer_header">

        <SwitchPreferenceCompat
            app:key="timer"
            app:defaultValue="false"
            app:summaryOff="@string/set_timer_off"
            app:summaryOn="@string/set_timer_on"
            app:title="@string/timer_title" />

    </PreferenceCategory>



    <PreferenceCategory app:title="@string/difficulty_header">

        <ListPreference
            app:key="difficulty"
            app:defaultValue="1"
            app:entries="@array/difficulty_entries"
            app:entryValues="@array/difficulty_values"
            app:title="@string/difficulty_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>


    <PreferenceCategory app:title="@string/ui_immersion_header">

        <SwitchPreferenceCompat
            app:key="uiImmersion"
            app:defaultValue="false"
            app:summaryOff="@string/french_immersion_off"
            app:summaryOn="@string/french_immersion_on"
            app:title="@string/ui_immersion_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ui_immersion_header">

        <SwitchPreferenceCompat
            app:key="autoSave"
            app:defaultValue="true"
            app:summaryOff="@string/auto_save_off"
            app:summaryOn="@string/auto_save_on"
            app:title="@string/auto_save_title" />

    </PreferenceCategory>



</PreferenceScreen>