<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ResultsFragmentPage">


    <ImageView
        android:id="@+id/result_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/puzzle_result_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fail" />

    <LinearLayout
        android:id="@+id/puzzle_result_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/result_buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_image_view" >
        <TextView
            android:id="@+id/puzzle_result_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_fail"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/puzzle_result_timer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_puzzle_timer"
            android:textSize="20sp"
            />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/result_buttons_layout"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_result_view"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/menu_main_menu_btn"
        app:layout_constraintHorizontal_bias="0.5"

/>

    <Button
        android:id="@+id/result_retry_puzzle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_puzzle_btn" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>